# tenkai

./: CMakeLists.txt  README.md  action.sh  format.sh  main.cpp
bench/: bench_simple_linalg.cpp  bench_simple_spatial.cpp
include/: cg.hpp  compile.hpp  linalg.hpp  operation_scheduler.hpp  register_alloc.hpp  tools.hpp
src/: cg.cpp  cg.hpp  compile.cpp  flatten.cpp  linalg.cpp  linalg.hpp  operation_scheduler.cpp  register_alloc.cpp  spatial.hpp  tools.cpp  unroller.cpp
test/: bench.cpp  bench2.cpp  test_basicmath.cpp  test_compiler.cpp  test_generated.cpp  test_hash.cpp  test_linalg.cpp  test_register.cpp  test_spatial.cpp
