FILE(GLOB_RECURSE SRC_FILES src/*.cpp)
add_library(tenkai ${SRC_FILES})
add_executable(main main.cpp)
include_directories(src)
target_link_libraries(main tenkai ${CMAKE_DL_LIBS})

# bench
option(BUILD_BENCH "build benchmark" OFF)
if(BUILD_BENCH)
  add_executable(bench test/bench.cpp)
  target_link_libraries(bench tenkai ${CMAKE_DL_LIBS})
  find_package(Eigen3 REQUIRED)
  include_directories(${EIGEN3_INCLUDE_DIR})
endif()

option(BUILD_TEST "build google test" ON)
if(BUILD_TEST)
  find_package(GTest REQUIRED)
  find_package(Eigen3 REQUIRED)
  include_directories(${EIGEN3_INCLUDE_DIR})
  function(setup_tenkai_test test_name test_src)
      add_executable(${test_name} ${test_src})
      target_link_libraries(${test_name} tenkai ${GTEST_LIBRARIES} pthread ${CMAKE_DL_LIBS})
      target_include_directories(${test_name} PUBLIC ${GTEST_INCLUDE_DIRS})
  endfunction()
  setup_tenkai_test(test_linalg test/test_linalg.cpp)
endif()
