FILE(GLOB_RECURSE SRC_FILES src/*.cpp)
set(CMAKE_CXX_STANDARD 20)
add_library(tenkai ${SRC_FILES})
target_link_libraries(tenkai ${CMAKE_DL_LIBS})
include_directories(include xbyak/xbyak)

function(setup_tenkai_executable test_name test_src)
  add_executable(${test_name} ${test_src})
  target_link_libraries(${test_name} tenkai ${GTEST_LIBRARIES} pthread ${CMAKE_DL_LIBS})
  target_include_directories(${test_name} PUBLIC ${GTEST_INCLUDE_DIRS})
endfunction()


option(BUILD_TEST "build google test" ON)
if(BUILD_TEST)
  find_package(GTest REQUIRED)
  find_package(Eigen3 REQUIRED)
  include_directories(${EIGEN3_INCLUDE_DIR})
  setup_tenkai_executable(test_arithmatic test/test_basicmath.cpp)
  setup_tenkai_executable(test_linalg test/test_linalg.cpp)
  setup_tenkai_executable(test_spatial test/test_spatial.cpp)
  setup_tenkai_executable(test_compiler test/test_compiler.cpp)
  # setup_tenkai_executable(test_extcall test/test_extcall.cpp)
  setup_tenkai_executable(bench_simple_linalg bench/bench_simple_linalg.cpp)
  setup_tenkai_executable(bench_simple_spacial bench/bench_simple_spatial.cpp)
endif()
